# private-internet

./: .env.example  .gitignore  BILLING.md  CLAUDE.md  DEPLOY.md  EC2_INVESTIGATE.md  MIGRATION.md  README.md  manage.py  pyproject.toml
.claude/: CLAUDE.md
agents/: main.py  requirements.txt
credit-dashboard/: README.md  check_credits.py
docs/: EXTERNAL_APIS.md  aws-setup.html  brain_hardware_guide.html
frontend/: index.html  package.json  vite.config.ts
infra/: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
migrations/: 0006_saas_users.sql  0007_memory_language.sql  0007_user_provisioning.sql  0009_job_matches_user_scope.sql  0010_aria.sql  0011_stories.sql  0012_pulse_post_format.sql  0014_aria_suno.sql  0015_per_user_personas.sql  0017_plan_tiers.sql  001_add_health_metrics.sql  0021_content_shares.sql  0026_trading_desk.sql
mobile/: README.md  pubspec.yaml
nginx/: personal-intelligence.conf
project-plan/: MASTER_PLAN.md  PHASE2_TOPIC_INTELLIGENCE.md
scripts/: _ssm_run.py  produce_intro_video.py  user_inventory.py
systemd/: content-generation.service  content-generation.timer  health-daily.service  health-daily.timer  personal-intelligence-agents.service  personal-intelligence-api.service
tests/: conftest.py  test_aria.py  test_bank_adviser.py  test_content_feed.py  test_i18n_post_generation.py  test_job_agent.py  test_language_resolver.py  test_memory_service.py  test_persona_generator.py  test_post_generation.py  test_request_context.py  test_samsung_health_ingest.py  test_sharing.py  test_stories.py  (+9 more)
(+356 files in other folders)
