[project]
name = "private-internet"
version = "0.1.0"
description = "Private Internet — self-hosted AI platform: memory brain, content generation, health and financial intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "fastmcp>=3.4.1",
    "mcp[cli]>=1.27.1",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.43.14",
    "pypdf>=4.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.29.0",
    "google-generativeai>=0.8.0",
    "pyjwt>=2.8.0",
    "pillow>=10.0.0",
    "lingua-language-detector>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
